# cowerc-adsorption

./: .gitignore  README.md
columns/batch_kinetics/: batch.py
columns/fitting/: app.py  chu_paper.py
columns/scaling_factor/: finding_x.ipynb  fitting_curves.ipynb
columns/thomas_model/: app.py  plotting.py  sensitivity.ipynb  sensitivity.py  sensitivity_thomas _otherbounds.ipynb  sensitivity_thomas.ipynb  sensitivity_utils.py  thomas_model_equations.py  thomas_model_plots.py
examples/getting_a_btc/: cleanAll.sh  make_report.py  runAll.sh
frontend/: breakthorugh.ipynb  breakthrough.py
notebooks/: advection.ipynb  mysetplot.py  pyclaw_example.ipynb  running_adsorptionFoam.ipynb  running_pfasFoam.ipynb
notebooks/calibration/: calibrator.ipynb
notebooks/only_python/: app.py  merging_data.ipynb  merging_data_other_experiments.ipynb  parameters.pkl  pilot(1.6min).ipynb  seven_contaminants(DI).ipynb  six_contaminants(0.18min).ipynb  six_contaminants(0.26min).ipynb  six_contaminants(0.35min).ipynb  six_contaminants(0.45min).ipynb  six_contaminants(0.62min).ipynb  six_contaminants.ipynb  summary_results.ipynb  summary_results.txt  two_contaminants.ipynb
notebooks/openfoam_model/: run_changing_write_time.py  (+1 more)
scripts/: pyproject.toml
scripts/adsorption_model/: README.md  __init__.py  adsorption_model.py  pyproject.toml
scripts/adsorption_model/tests/: test_initial.ipynb
scripts/cowerc_adsorption/: README.md  __init__.py  cowerc_adsorption.py  pyproject.toml
scripts/cowerc_adsorption/tests/: test_repr_html.ipynb
scripts/organize_foams/: boundary_probe.py
(+110 files in other folders)
