[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "organize_foams"
version = "0.0.1"
authors = [
  { name="Edwin Saavedra C", email="author@example.com" },
]
description = "Organize adsorption results"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/edsaac/cowerc-adsorption"
"Bug Tracker" = "https://github.com/edsaac/cowerc-adsorption/issues"